connection board to db
