# Backend/routes/api/task.js
@@ -6,6 +6,7 @@ const authMiddleware = require("../../middleware/auth");
 //Tasks
 router.get("/tasks", authMiddleware, taskControllers.getTasks);
 router.get("/tasks/:id", authMiddleware, taskControllers.getTask);
+router.get("/tasks/board/:id", taskControllers.getTasksByBoardId);
 router.post("/tasks", authMiddleware, taskControllers.createTask);
 router.put("/tasks/:id", authMiddleware, taskControllers.updateTask);
 router.delete("/tasks/:id", authMiddleware, taskControllers.deleteTask);
